@@ -7,7 +7,7 @@ INSTALLATION
 ============
 
 This package uses the Tcl Extension Architecture (TEA). Please see the
-we page
+web page
 
     http://www.tcl.tk/doc/tea/
 
